--- a/main.html
+++ b/main.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <nav>
+    <ul>
+      <li><a href="https://en.wikipedia.org/wiki/Wiki">Wiki</a></li>
+      <li><a href="https://www.techtarget.com/whatis/definition/wiki">Tech</a></li>
+      <li><a href="https://www.w3schools.com/">w3schools</a></li>
+    </ul>
+  </nav>
+  <h1>3 random audios</h1>
+  <a href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">one</a>
+  <a href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">two</a>
+  <a href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">three</a>
 </body>
-
 </html>
