--- a/main.html
+++ b/main.html
@@ -16,6 +16,6 @@
   <h1>3 random audios</h1>
   <a href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">one</a>
   <a href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">two</a>
-  <a href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">three</a>
+  <a href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">three</a>
 </body>
 </html>
