--- a/main.html
+++ b/main.html
@@ -15,8 +15,10 @@
     </ul>
   </nav>
   <h1>3 random audios</h1>
-  <a href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">one</a>
-  <a href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">two</a>
-  <a href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">three</a>
+  <audio controls>
+	  <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+	  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+	  <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/ogg">
+  </audio>
 </body>
 </html>
